--- a/index.html
+++ b/index.html
@@ -70,14 +70,14 @@
                 </div>
             </div>
 
-            <div class="actions">
+           <div class="actions">
     <div class="share-area">
         <p>＼ 鑑定結果をシェアする ／</p>
         <div class="share-btns">
             <button id="share-x" class="share-btn x-btn">X</button>
             <button id="share-threads" class="share-btn threads-btn">Threads</button>
             <button id="share-line" class="share-btn line-btn-sns">LINE</button>
-        
+            <button id="share-inst" class="share-btn inst-btn">Instagram</button>
         </div>
     </div>
     
