--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <h1>個性分析システム</h1>
-        <p>生年月日からあなたの生まれ持った本質と運命を紐解く</p>
+        <p>生年月日の統計データから<br>あなたの生まれ持った本質と運命を分析</p>
     </header>
 
     <main>
